feat: 게임 진행 중 입력에 대한 예외처리
- 같은 숫자를 중복 입력한 경우 예외처리